GNOME Bugzilla – Bug 755113
Regression: dvbsuboverlay negotiates invalid caps
Last modified: 2015-09-16 15:01:03 UTC
Recent changes to caps nego mean dvbsuboverlay now outputs caps with GstVideoOverlayComposition even if downstream can't handle them, because it only checks accept_caps and not a full peer caps intersection. Patch coming.
Created attachment 311456 [details] [review] dvbsuboverlay: Check if downstream supports GstVideoOverlayComposition. Fix the negotiation of GstVideoOverlayComposition by checking intersection with the peer caps, rather than just accept-caps, which might only check the pad template.
Please check if the same bug exists in dvdspu and textoverlay :)
I stole the code from textoverlay ;) dvdspu GstVideoCompositionOverlay support isn't merged yet.